remove built with hugo and love

--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -39,8 +39,7 @@
         </div>
         <div class="flex flex-wrap align-center">
             <span class="gblog-footer__item">
-                Built with <a href="https://gohugo.io/" class="gblog-footer__link">Hugo</a> and
-                <svg class="icon heart"><use xlink:href="#heart"></use></svg>
+                &#169; All rights reserved.
             </span>
         </div>
         {{ with .Site.Params.GeekblogHostedOn }}
