--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -10,6 +10,9 @@
             {{ end }}
         </a>
     </div>
+<!-- MathJax Solution-->
+<!-- https://geoffruddock.com/math-typesetting-in-hugo/ -->
+{{ partial "mathjax_support.HTML" . }}
 </header>
 <nav class="gblog-nav">
     <input type="checkbox" id="menu-control" class="hidden">
