Removed subtitle from header

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -5,9 +5,9 @@
                 <img class="gblog-brand__img" src="{{ (default "brand.svg" .Site.Params.logo) | relURL }}" alt="" width=60 height=60>
                 Colin <span class = "highlight">Bledsoe</span> <!--Added this Bledsoe part and exchanged {{ .Site.Title }} for Colin -->
             </span>
-            {{ with .Site.Params.subtitle }}
-            <span class="gblog-brand__subtitle flex align-center justify-center">{{ . }}</span>
-            {{ end }}
+            <!--{{ with .Site.Params.subtitle }}-->
+            <!--<span class="gblog-brand__subtitle flex align-center justify-center">{{ . }}</span>-->
+            <!--{{ end }}-->
         </a>
     </div>
 <!-- MathJax Solution-->
