--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -11,14 +11,14 @@
         </a>
         <!-- Start of Google Analytics-->
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-92GNDHM20N"></script>
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-92GNDHM20N"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
             gtag('config', 'G-92GNDHM20N');
-        </script>
+        </script> -->
         <!-- End of Google Analytics-->
     </div>
 <!-- MathJax Solution-->
